// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getCommitsTypes should return \`breaking\` for breaking changes 1`] = `
[
  "feat",
  "fix",
  "chore",
  "breaking",
]
`;

exports[`getCommitsTypes should return commits types 1`] = `
[
  "feat",
  "fix",
  "chore",
]
`;

exports[`getCommitsTypes should return unique types 1`] = `
[
  "feat",
  "fix",
  "chore",
]
`;
